--- a/src/main/resources/templates/dashboard/salud_sistema.html
+++ b/src/main/resources/templates/dashboard/salud_sistema.html
@@ -23,27 +23,27 @@
 						</div>
 						<div class="card-body p-4">
 							<div class="row d-flex justify-content-center">
-								<div class="border box-info-st border-left-success p-3 m-3 col-1 text-center">
+								<div class="border box-info-st border-left border-left-success p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text">VALIDACI&Oacute;N</span>
 									<span class="text-xg font-weight-bold numeric">00</span>
 								</div>
 								<div
-									class="border box-info-st border-left-danger p-3 m-3 col-1 text-center">
+									class="border box-info-st border-left border-left-danger p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text-dark text">GESTI&Oacute;N</span>
 									<span class="text-xg font-weight-bold text-dark numeric">00</span>
 								</div>
 								<div
-									class="border box-info-st border-left-success p-3 m-3 col-1 text-center">
+									class="border box-info-st border-left border-left-success p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text">ACOMPANA</span>
 									<span class="text-xg font-weight-bold numeric">00</span>
 								</div>
 								<div
-									class="border box-info-st border-left-warning p-3 m-3 col-1 text-center">
+									class="border box-info-st border-left border-left-warning p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text">VINCULACI&Oacute;N</span>
 									<span class="text-xg font-weight-bold numeric">00</span>
 								</div>
 								<div
-									class="border box-info-st border-left-success p-3 m-3 col-1 text-center">
+									class="border box-info-st border-left border-left-success p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text">T&Eacute;RMINO</span>
 									<span class="text-xg font-weight-bold numeric">00</span>
 								</div>
