Correccion de cierre tag td de salud_sistemas y evento clic para obtener el folio seleccionado  para visor_soporte

--- a/src/main/resources/templates/dashboard/visor_soporte.html
+++ b/src/main/resources/templates/dashboard/visor_soporte.html
@@ -53,7 +53,7 @@
 												<i class="fa-solid fa-bell text-danger fs-5"></i>
 											</td>
 										</tr>
-										<tr class="collapse contNetflix">
+										<tr class="collapse contNetflix collapse-selected">
 											<td><span class="text-xg font-weight-bold"></span></td>
 											<td><span class="text-xg font-weight-bold text-dark">00183456</span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
@@ -63,7 +63,7 @@
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
-										<tr class="collapse contNetflix">
+										<tr class="collapse contNetflix collapse-selected">
 											<td><span class="text-xg font-weight-bold"></span></td>
 											<td><span class="text-xg font-weight-bold text-dark">00185680</span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
@@ -73,7 +73,7 @@
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
-										<tr class="collapse contNetflix">
+										<tr class="collapse contNetflix collapse-selected">
 											<td><span class="text-xg font-weight-bold"></span></td>
 											<td><span class="text-xg font-weight-bold text-dark">0187901</span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
@@ -83,7 +83,7 @@
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
-										<tr class="collapse contNetflix">
+										<tr class="collapse contNetflix collapse-selected">
 											<td><span class="text-xg font-weight-bold"></span></td>
 											<td><span class="text-xg font-weight-bold text-dark">00191256</span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
@@ -93,7 +93,7 @@
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
-										<tr class="collapse contNetflix">
+										<tr class="collapse contNetflix collapse-selected">
 											<td><span class="text-xg font-weight-bold"></span></td>
 											<td><span class="text-xg font-weight-bold text-dark">00194556</span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
@@ -103,7 +103,7 @@
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
-										<tr class="collapse contNetflix">
+										<tr class="collapse contNetflix collapse-selected">
 											<td><span class="text-xg font-weight-bold"></span></td>
 											<td><span class="text-xg font-weight-bold text-dark">00196661</span></td>
 											<td class="text-center"><i class="fa-solid fa-hexagon bg-danger fs-4"></i></td>
@@ -113,7 +113,7 @@
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold"></span></td>
 										</tr>
-										<tr class="collapse contNetflix">
+										<tr class="collapse contNetflix collapse-selected">
 											<td><span class="text-xg font-weight-bold"></span></td>
 											<td><span class="text-xg font-weight-bold text-dark">00200011</span></td>
 											<td class="text-center"><span class="text-xg font-weight-bold text-success">Completo</span></td>
