--- a/src/main/resources/templates/dashboard/salud_sistema.html
+++ b/src/main/resources/templates/dashboard/salud_sistema.html
@@ -67,54 +67,54 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td><span class="text-xg font-weight-bold">01</span>
-											<td><span class="text-xg font-weight-bold">00203</span>
-											<td><span class="text-xg font-weight-bold">00633</span>
-											<td><span class="text-xg font-weight-bold">AMAZON</span>
-											<td><span class="text-xg font-weight-bold">AMABN</span>
-											<td><span class="text-xg font-weight-bold">Alta</span>
-											<td><span class="text-xg font-weight-bold">Pendiente</span>
-											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
+											<td><span class="text-xg font-weight-bold">01</span></td>
+											<td><span class="text-xg font-weight-bold">00203</span></td>
+											<td><span class="text-xg font-weight-bold">00633</span></td>
+											<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+											<td><span class="text-xg font-weight-bold">AMABN</span></td>
+											<td><span class="text-xg font-weight-bold">Alta</span></td>
+											<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span></td>
 										</tr>
 										<tr>
-											<td><span class="text-xg font-weight-bold">02</span>
-											<td><span class="text-xg font-weight-bold">00203</span>
-											<td><span class="text-xg font-weight-bold">00633</span>
-											<td><span class="text-xg font-weight-bold">AMAZON</span>
-											<td><span class="text-xg font-weight-bold">AMABN</span>
-											<td><span class="text-xg font-weight-bold">Alta</span>
-											<td><span class="text-xg font-weight-bold">Pendiente</span>
-											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
+											<td><span class="text-xg font-weight-bold">02</span></td>
+											<td><span class="text-xg font-weight-bold">00203</span></td>
+											<td><span class="text-xg font-weight-bold">00633</span></td>
+											<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+											<td><span class="text-xg font-weight-bold">AMABN</span></td>
+											<td><span class="text-xg font-weight-bold">Alta</span></td>
+											<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span></td>
 										</tr>
 										<tr>
-											<td><span class="text-xg font-weight-bold">03</span>
-											<td><span class="text-xg font-weight-bold">00203</span>
-											<td><span class="text-xg font-weight-bold">00633</span>
-											<td><span class="text-xg font-weight-bold">AMAZON</span>
-											<td><span class="text-xg font-weight-bold">AMABN</span>
-											<td><span class="text-xg font-weight-bold">Alta</span>
-											<td><span class="text-xg font-weight-bold">Pendiente</span>
-											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
+											<td><span class="text-xg font-weight-bold">03</span></td>
+											<td><span class="text-xg font-weight-bold">00203</span></td>
+											<td><span class="text-xg font-weight-bold">00633</span></td>
+											<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+											<td><span class="text-xg font-weight-bold">AMABN</span></td>
+											<td><span class="text-xg font-weight-bold">Alta</span></td>
+											<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span></td>
 										</tr>
 										<tr>
-											<td><span class="text-xg font-weight-bold">04</span>
-											<td><span class="text-xg font-weight-bold">00203</span>
-											<td><span class="text-xg font-weight-bold">00633</span>
-											<td><span class="text-xg font-weight-bold">AMAZON</span>
-											<td><span class="text-xg font-weight-bold">AMABN</span>
-											<td><span class="text-xg font-weight-bold">Alta</span>
-											<td><span class="text-xg font-weight-bold">Pendiente</span>
-											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
+											<td><span class="text-xg font-weight-bold">04</span></td>
+											<td><span class="text-xg font-weight-bold">00203</span></td>
+											<td><span class="text-xg font-weight-bold">00633</span></td>
+											<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+											<td><span class="text-xg font-weight-bold">AMABN</span></td>
+											<td><span class="text-xg font-weight-bold">Alta</span></td>
+											<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span></td>
 										</tr>
 										<tr>
-											<td><span class="text-xg font-weight-bold">05</span>
-											<td><span class="text-xg font-weight-bold">00203</span>
-											<td><span class="text-xg font-weight-bold">00633</span>
-											<td><span class="text-xg font-weight-bold">AMAZON</span>
-											<td><span class="text-xg font-weight-bold">AMABN</span>
-											<td><span class="text-xg font-weight-bold">Alta</span>
-											<td><span class="text-xg font-weight-bold">Pendiente</span>
-											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span>
+											<td><span class="text-xg font-weight-bold">05</span></td>
+											<td><span class="text-xg font-weight-bold">00203</span></td>
+											<td><span class="text-xg font-weight-bold">00633</span></td>
+											<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+											<td><span class="text-xg font-weight-bold">AMABN</span></td>
+											<td><span class="text-xg font-weight-bold">Alta</span></td>
+											<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+											<td><span class="text-xg font-weight-bold">En espera de Consumo de G3</span></td>
 										</tr>										
 									</tbody>
 								</table>
