avance de tabla agregada en ventas

--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -503,6 +503,11 @@ table tr.collapse {
 }
 /* .................................................................................................................. GENERAL FIN */
 
+/* .................................................................................................................. VISOR_SOPORTE INI */
+.cont-card-verif-ent{ display: none;}
+
+/* .................................................................................................................. VISOR_SOPORTE FIN */
+
 /* .................................................................................................................. MEDIA INI */
 @media (max-width: 1300px) {
 }
