--- a/src/main/resources/templates/dashboard/ventas.html
+++ b/src/main/resources/templates/dashboard/ventas.html
@@ -62,53 +62,142 @@
 									</nav>
 									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
 								</div>
-								<SCRIPT>
-									(function($) {
-										"use strict";
-
-										$('#id_0,#id_1')
-												.datetimepicker(
-														{
-															allowInputToggle : true,
-															showClose : true,
-															showClear : true,
-															showTodayButton : true,
-															format : "MM/DD/YYYY hh:mm:ss A",
-															icons : {
-																time : 'fa fa-clock-o',
-
-																date : 'fa fa-calendar-o',
-
-																up : 'fa fa-chevron-up',
-
-																down : 'fa fa-chevron-down',
-
-																previous : 'fa fa-chevron-left',
-
-																next : 'fa fa-chevron-right',
-
-																today : 'fa fa-chevron-up',
-
-																clear : 'fa fa-trash',
-
-																close : 'fa fa-close'
-															},
-
-														});
-
-									})(jQuery);
-								</script>
+								
 							</div>
 						</div>
 					</div>
 				</div>
+				
 				<div class="col-12">
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
 							<h5 class="text-pr text-primary">Comportamiento en las ventas por Streaming</h5>
 						</div>
-						<div class="card-body px-0 pt-0 pb-2">
+						<div class="card-body p-4">
+							<div class="row">
+								<div class="col-xxl-9 col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
+									<table
+										class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
+										<thead>
+											<tr>
+												<th width="5px"></th>
+												<th
+													class="text-uppercase text-primary fs-6 font-weight-bolder ">Folio
+													Intercambio</th>
+												<th
+													class="text-uppercase text-primary fs-6 font-weight-bolder  ps-2">Folio
+													Solicitud</th>
+												<th
+													class="text-uppercase text-primary fs-6 font-weight-bolder  ps-2">Streaming</th>
+												<th
+													class="text-uppercase text-primary fs-6 font-weight-bolder text-center ps-2">Producto</th>
+												<th
+													class="text-uppercase text-primary fs-6 font-weight-bolder  ps-2">Movimiento</th>
+												<th
+													class="text-uppercase text-primary fs-6 font-weight-bolder  ps-2">Estatus</th>
+												<th
+													class="text-uppercase text-primary fs-6 font-weight-bolder text-center ps-2">Motivo</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td><span class="text-xg font-weight-bold">01</span></td>
+												<td><span class="text-xg font-weight-bold">00203</span></td>
+												<td><span class="text-xg font-weight-bold">00633</span></td>
+												<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+												<td><span class="text-xg font-weight-bold">AMABN</span></td>
+												<td><span class="text-xg font-weight-bold">Alta</span></td>
+												<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+												<td><span class="text-xg font-weight-bold">En
+														espera de Consumo de G3</span></td>
+											</tr>
+											<tr>
+												<td><span class="text-xg font-weight-bold">02</span></td>
+												<td><span class="text-xg font-weight-bold">00203</span></td>
+												<td><span class="text-xg font-weight-bold">00633</span></td>
+												<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+												<td><span class="text-xg font-weight-bold">AMABN</span></td>
+												<td><span class="text-xg font-weight-bold">Alta</span></td>
+												<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+												<td><span class="text-xg font-weight-bold">En
+														espera de Consumo de G3</span></td>
+											</tr>
+											<tr>
+												<td><span class="text-xg font-weight-bold">03</span></td>
+												<td><span class="text-xg font-weight-bold">00203</span></td>
+												<td><span class="text-xg font-weight-bold">00633</span></td>
+												<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+												<td><span class="text-xg font-weight-bold">AMABN</span></td>
+												<td><span class="text-xg font-weight-bold">Alta</span></td>
+												<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+												<td><span class="text-xg font-weight-bold">En
+														espera de Consumo de G3</span></td>
+											</tr>
+											<tr>
+												<td><span class="text-xg font-weight-bold">04</span></td>
+												<td><span class="text-xg font-weight-bold">00203</span></td>
+												<td><span class="text-xg font-weight-bold">00633</span></td>
+												<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+												<td><span class="text-xg font-weight-bold">AMABN</span></td>
+												<td><span class="text-xg font-weight-bold">Alta</span></td>
+												<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+												<td><span class="text-xg font-weight-bold">En
+														espera de Consumo de G3</span></td>
+											</tr>
+											<tr>
+												<td><span class="text-xg font-weight-bold">05</span></td>
+												<td><span class="text-xg font-weight-bold">00203</span></td>
+												<td><span class="text-xg font-weight-bold">00633</span></td>
+												<td><span class="text-xg font-weight-bold">AMAZON</span></td>
+												<td><span class="text-xg font-weight-bold">AMABN</span></td>
+												<td><span class="text-xg font-weight-bold">Alta</span></td>
+												<td><span class="text-xg font-weight-bold">Pendiente</span></td>
+												<td><span class="text-xg font-weight-bold">En
+														espera de Consumo de G3</span></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+								<div class="col-xxl-3 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-center px-5">
+									<br />
+									<h3 class="h5">Selecciona fechas para comparar</h3>
+									<div class="input-group">
+										<div class="w-100">
+											<div class="form-group">
+												<div class="input-group date">
+													<span class="input-group-text">De</span> <input type="text"
+														value="" class="form-control px-3"
+														placeholder="MM/DD/YYYY hh:mm:ss" required />
+												</div>
+												<hr />
+												<div class="input-group date">
+													<span class="input-group-text">Hasta</span> <input
+														type="text" value="" class="form-control px-3"
+														placeholder="MM/DD/YYYY hh:mm:ss" required />
+												</div>
+											</div>
+										</div>
+									</div>
+									<nav class="navbar  bg-info">
+										<div class="container-fluid justify-content-center">
+											<a class="navbar-brand text-white fs-5 text-date-chart" href="#">del 01 de Enero al 31 de Diciembre 2022</a>
+										</div>
+									</nav>
+									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-12">
+					<div class="card mb-4">
+						<div class="card-header pb-0 text-primary">
+							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
+							<h5 class="text-pr text-primary">Comportamiento en las ventas por Streaming</h5>
+						</div>
+						<div class="card-body p-4">
 							
 							
 							<!-- Chart code -->
@@ -125,13 +214,13 @@
 									<div class="input-group">
 										<div class="w-100">
 											<div class="form-group">
-												<div class="input-group date" id="id_0">
+												<div class="input-group date">
 													<span class="input-group-text">De</span> <input type="text"
 														value="" class="form-control px-3"
 														placeholder="MM/DD/YYYY hh:mm:ss" required />
 												</div>
 												<hr />
-												<div class="input-group date" id="id_1">
+												<div class="input-group date">
 													<span class="input-group-text">Hasta</span> <input
 														type="text" value="" class="form-control px-3"
 														placeholder="MM/DD/YYYY hh:mm:ss" required />
@@ -146,48 +235,47 @@
 									</nav>
 									<button type="button" class="btn btn-dark mt-3">APLICAR</button>
 								</div>
-								<SCRIPT>
-									(function($) {
-										"use strict";
-
-										$('#id_0,#id_1')
-												.datetimepicker(
-														{
-															allowInputToggle : true,
-															showClose : true,
-															showClear : true,
-															showTodayButton : true,
-															format : "MM/DD/YYYY hh:mm:ss A",
-															icons : {
-																time : 'fa fa-clock-o',
-
-																date : 'fa fa-calendar-o',
-
-																up : 'fa fa-chevron-up',
-
-																down : 'fa fa-chevron-down',
-
-																previous : 'fa fa-chevron-left',
-
-																next : 'fa fa-chevron-right',
-
-																today : 'fa fa-chevron-up',
-
-																clear : 'fa fa-trash',
-
-																close : 'fa fa-close'
-															},
-
-														});
-
-									})(jQuery);
-								</script>
 							</div>
 						</div>
 					</div>
 				</div>
+				
 			</div>
 		</div>
 	</main>
+	<SCRIPT>
+		(function($) {
+			"use strict";
+
+			$('.date').datetimepicker({
+				allowInputToggle : true,
+				showClose : true,
+				showClear : true,
+				showTodayButton : true,
+				format : "MM/DD/YYYY hh:mm:ss A",
+				icons : {
+					time : 'fa fa-clock-o',
+
+					date : 'fa fa-calendar-o',
+
+					up : 'fa fa-chevron-up',
+
+					down : 'fa fa-chevron-down',
+
+					previous : 'fa fa-chevron-left',
+
+					next : 'fa fa-chevron-right',
+
+					today : 'fa fa-chevron-up',
+
+					clear : 'fa fa-trash',
+
+					close : 'fa fa-close'
+				},
+
+			});
+
+		})(jQuery);
+	</script>
 </body>
 </html>
