--- a/src/main/resources/templates/dashboard/visor_soporte.html
+++ b/src/main/resources/templates/dashboard/visor_soporte.html
@@ -14,7 +14,7 @@
 	<main class="main-container-wk">
 		<div class="container-fluid padding-none">
 			<div class="row">
-				<div class="col-xl-9 col-md-12 col-sm-12 mb-xl-0 mb-4">
+				<div class="col-xl-12 col-md-12 col-sm-12 mb-xl-0 mb-4 cont-card-cat-etapas">
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
@@ -224,7 +224,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-3">
+				<div class="col-xl-3 cont-card-verif-ent">
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
