--- a/src/main/resources/templates/catalogos/productos.html
+++ b/src/main/resources/templates/catalogos/productos.html
@@ -18,239 +18,33 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0">
 							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
-							<h5 class="text-pr text-primary">C&aacute;talogo de Productos</h5>
+							<h5 class="text-pr text-primary tncb s6">C&aacute;talogo de Productos</h5>
 						</div>
 						<div class="card-body p-4">
-							<div class="table-responsive p-0">
+							<div class="table-responsive">
 								<table
-									class="table align-items-center justify-content-center mb-0 table-striped">
+									class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
 									<thead>
 										<tr>
-											<th class="text-uppercase text-dark fs-6 font-weight-bolder ">Proyecto</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder  ps-2">Presupuesto</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder  ps-2">Status</th>
-											<th
-												class="text-uppercase text-dark fs-6 font-weight-bolder text-center ps-2">Avance</th>
-											<th></th>
+											<th width="5px"></th>
+											<th class="text-uppercase tncb s4 text-primary ">Clave</th>
+											<th class="text-uppercase text-primary tncb s4 ps-2">Descripci&oacute;n</th>
+											<th class="text-uppercase text-primary tncb s4 ps-2">Plataforma</th>
+											<th class="text-uppercase text-primary tncb s4 ps-2"></th>
+											<th class="text-uppercase text-primary tncb s4 ps-2"></th>
 										</tr>
 									</thead>
 									<tbody>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Spotify</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$2,500</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">trabajando</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">60%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-info"
-																role="progressbar" aria-valuenow="60" aria-valuemin="0"
-																aria-valuemax="100" style="width: 60%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
+										<tr th:if="${list.size() == 0}">
+											<td colspan="5" align="center"><span class="tncb s3">- No se encontraron registros -</span></td>
 										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Invision</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$5,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">realizado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">100%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="100" aria-valuemin="0"
-																aria-valuemax="100" style="width: 100%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Jira</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$3,400</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">cancelado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">30%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-danger"
-																role="progressbar" aria-valuenow="30" aria-valuemin="0"
-																aria-valuemax="30" style="width: 30%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Slack</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$1,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">cancelado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">0%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="0" aria-valuemin="0"
-																aria-valuemax="0" style="width: 0%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Webdev</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$14,000</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">trabajando</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">80%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-info"
-																role="progressbar" aria-valuenow="80" aria-valuemin="0"
-																aria-valuemax="80" style="width: 80%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="d-flex px-2">
-													<div>
-														<i class="fa-regular fa-square-caret-right me-2 fs-4"></i>
-													</div>
-													<div class="my-auto">
-														<h6 class="mb-0 text-sg">Adobe XD</h6>
-													</div>
-												</div>
-											</td>
-											<td>
-												<p class="text-sg font-weight-bold mb-0">$2,300</p>
-											</td>
-											<td><span class="text-xg font-weight-bold">realizado</span>
-											</td>
-											<td class="align-middle text-center">
-												<div
-													class="d-flex align-items-center justify-content-center">
-													<span class="me-2 text-xg font-weight-bold">100%</span>
-													<div>
-														<div class="progress">
-															<div class="progress-bar bg-gradient-success"
-																role="progressbar" aria-valuenow="100" aria-valuemin="0"
-																aria-valuemax="100" style="width: 100%;"></div>
-														</div>
-													</div>
-												</div>
-											</td>
-											<td class="align-middle">
-												<button class="btn btn-link text-secondary mb-0"
-													aria-haspopup="true" aria-expanded="false">
-													<i class="fa-solid fa-chevron-right text-xg"></i>
-												</button>
-											</td>
+										<tr th:if="${list.size() > 0}" th:each="o, itr: ${list}">
+											<td><span class="text-xg tnrr s2" th:text="${count}"></span></td>
+											<td><span class="text-xg tnrr s2" th:text="${o.clave}"></span></td>
+											<td><span class="text-xg tnrr s2" th:text="${o.descripcion}"></span></td>
+											<td><span class="text-xg tnrr s2" th:text="${o.plataforma.descripcion}"></span></td>
+											<td><img src="./resources/img/edit.svg" width="20px" /></td>
+											<td><img src="./resources/img/delete.svg" width="20px" /></td>
 										</tr>
 									</tbody>
 								</table>
