boton de alta con modal

--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -418,6 +418,8 @@ table tr.collapse {
 /* .................................................................................................................. TABLE FIN */
 
 /* .................................................................................................................. GENERAL FIN */
+.cursor-pointer{cursor: pointer;}
+
 .text-date-chart{
 	margin: 0 !important;
 }
@@ -500,6 +502,11 @@ table tr.collapse {
     right: 1rem;
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+.card-header .btn-group{
+	position: absolute;
+    right: 1rem;
 }
 /* .................................................................................................................. GENERAL FIN */
 
